30-tools/vault/prd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
spec:
  ingressClassName: nginx
  rules:
    - host: vault.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 80
  tls:
    - hosts:
        - vault.check-consulting.net
      secretName: vault-tls
